fixed banner spacing

--- a/app/assets/stylesheets/new_structure/common/_header.css.scss
+++ b/app/assets/stylesheets/new_structure/common/_header.css.scss
@@ -650,7 +650,7 @@ div#wrapper_new_menu{
     padding-top:5px;
     height:31px;
   }
-  .content_new{height: 33px;margin-bottom: 15px;}
+  .content_new{height: 33px;margin-bottom: 10px;}
 }
 
 nav.menu_new{
